--- a/pillpassport/app/src/main/res/values/strings.xml
+++ b/pillpassport/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">pillpassport</string>
+
+    <string-array name="languages_array">
+        <item>English</item>
+        <item>Spanish</item>
+        <item>Japanese</item>
+        <item>German</item>
+    </string-array>
 </resources>
